# cpp-template02

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectOptions.cmake
cmake/modules/: BuildOptions.cmake
config/: CMakeLists.txt  MyCalculatorConfig.cmake.in
config/options/: CMakeLists.txt  Options.hpp.in
config/package/: CMakeLists.txt  MyCalculatorConfig.cmake.in
include/calculator/: Calculator.hpp
src/: CMakeLists.txt  Calculator.cpp  CalculatorImpl.cpp  CalculatorImpl.hpp
test/: CMakeLists.txt
test/src/: test.cpp
